# functions/social_networks/instagram/docs/instagram_api/swagger_docs.yaml
@@ -85,7 +85,7 @@ paths:
           content:
             application/json:
               schema:
-                example: {}
+                example: { }
 
 components:
   schemas:
@@ -107,79 +107,79 @@ components:
     comment-item:
       type: object
       properties:
-          node:
-            type: object
-            description: "Details info of comment"
-            properties:
-              id:
-                type: string
-                description: "ID of comment in that had convert to string. Convert to \"int\" to insert into DB "
-                example: "17964293053355396"
-              text:
-                type: string
-                description: "Content of comment"
-                example: "Da chị đẹp quá ❤️"
-              created_at:
-                type: integer
-                description: "The time that comment had been created in timestamp"
-                example: 1605848445
-              did_report_as_spam:
-                type: boolean
-                description: "Comment had been reported as spam or not"
-                example: false
-              owner:
-                type: object
-                description: "Basic info of commenter"
-                properties:
-                  id:
-                    type: string
-                    description: "Original ID of commenter on IG"
-                    example: "5622565700"
-                  is_verified:
-                    type: boolean
-                    description: "Original ID of commenter on IG"
-                    example: "5622565700"
-                  profile_pic_url:
-                    type: string
-                    description: "Avatar URL of commenter"
-                    example: https://instagram.fdad1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/93350323_225972782148650_394921070341128192_n.jpg?_nc_ht=instagram.fdad1-1.fna.fbcdn.net\u0026_nc_ohc=ORd8en3Imd4AX8z5wX7\u0026tp=1\u0026oh=bbcaeadfbc275c4850a277bba353e9f0\u0026oe=604B98E5"
-                  username:
-                    type: string
-                    description: "Username of commenter on IG"
-                    example: "khanhvan110"
-              viewer_has_liked:
-                type: boolean
-                description: "Viewer has liked comment or not?"
-                example: false
-              edge_liked_by:
-                type: object
-                description: "Like info of comment: Num like"
-                properties:
-                  count:
-                    type: integer
-                    description: "Num like which comment had been had"
-                    example: 1
-              edge_threaded_comments:
-                type: object
-                description: "Reply comment info if have"
-                properties:
-                  count:
-                    type: integer
-                    description: "Num reply comment that this comment had"
-                    example: 1
-                  page_info:
-                    $ref: '#/components/schemas/paging_info'
-                  edges:
-                    type: array
-                    description: "List comment reply"
-                    example: [{"node": {"id": "17930489035433881", "text": "@joshthaq thế tui có ác hong 🙈???", "created_at": 1605872744, "did_report_as_spam": false, "owner": {"id": "9020894285", "is_verified": true, "profile_pic_url": "https://instagram.fdad1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/145010747_3609873835757258_6982124722443592628_n.jpg?_nc_ht=instagram.fdad1-1.fna.fbcdn.net\u0026_nc_ohc=oXotPmTRoUEAX8B-3U_\u0026tp=1\u0026oh=b802412bf744b51cd194da1853fa808d\u0026oe=604C0809", "username": "tramngo.official"}, "viewer_has_liked": false, "edge_liked_by": {"count": 1}, "is_restricted_pending": false}}]
-                    items:
-                      $ref: '#/components/schemas/comment-item'
-            required:
-              - id
-              - text
-              - created_at
-              - did_report_as_spam
-              - owner
-              - view_has_liked
-              - edge_liked_by
+        node:
+          type: object
+          description: "Details info of comment"
+          properties:
+            id:
+              type: string
+              description: "ID of comment in that had convert to string. Convert to \"int\" to insert into DB "
+              example: "17964293053355396"
+            text:
+              type: string
+              description: "Content of comment"
+              example: "Da chị đẹp quá ❤️"
+            created_at:
+              type: integer
+              description: "The time that comment had been created in timestamp"
+              example: 1605848445
+            did_report_as_spam:
+              type: boolean
+              description: "Comment had been reported as spam or not"
+              example: false
+            owner:
+              type: object
+              description: "Basic info of commenter"
+              properties:
+                id:
+                  type: string
+                  description: "Original ID of commenter on IG"
+                  example: "5622565700"
+                is_verified:
+                  type: boolean
+                  description: "Original ID of commenter on IG"
+                  example: "5622565700"
+                profile_pic_url:
+                  type: string
+                  description: "Avatar URL of commenter"
+                  example: https://instagram.fdad1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/93350323_225972782148650_394921070341128192_n.jpg?_nc_ht=instagram.fdad1-1.fna.fbcdn.net\u0026_nc_ohc=ORd8en3Imd4AX8z5wX7\u0026tp=1\u0026oh=bbcaeadfbc275c4850a277bba353e9f0\u0026oe=604B98E5"
+                username:
+                  type: string
+                  description: "Username of commenter on IG"
+                  example: "khanhvan110"
+            viewer_has_liked:
+              type: boolean
+              description: "Viewer has liked comment or not?"
+              example: false
+            edge_liked_by:
+              type: object
+              description: "Like info of comment: Num like"
+              properties:
+                count:
+                  type: integer
+                  description: "Num like which comment had been had"
+                  example: 1
+            edge_threaded_comments:
+              type: object
+              description: "Reply comment info if have"
+              properties:
+                count:
+                  type: integer
+                  description: "Num reply comment that this comment had"
+                  example: 1
+                page_info:
+                  $ref: '#/components/schemas/paging_info'
+                edges:
+                  type: array
+                  description: "List comment reply"
+                  example: [ { "node": { "id": "17930489035433881", "text": "@joshthaq thế tui có ác hong 🙈???", "created_at": 1605872744, "did_report_as_spam": false, "owner": { "id": "9020894285", "is_verified": true, "profile_pic_url": "https://instagram.fdad1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/145010747_3609873835757258_6982124722443592628_n.jpg?_nc_ht=instagram.fdad1-1.fna.fbcdn.net\u0026_nc_ohc=oXotPmTRoUEAX8B-3U_\u0026tp=1\u0026oh=b802412bf744b51cd194da1853fa808d\u0026oe=604C0809", "username": "tramngo.official" }, "viewer_has_liked": false, "edge_liked_by": { "count": 1 }, "is_restricted_pending": false } } ]
+                  items:
+                    $ref: '#/components/schemas/comment-item'
+          required:
+            - id
+            - text
+            - created_at
+            - did_report_as_spam
+            - owner
+            - view_has_liked
+            - edge_liked_by
